[package]
name = "rp2040-psp-joystick"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Profiles taken from https://github.com/rp-rs/rp2040-project-template

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[dependencies]
cortex-m-rt = "0.7.3"
defmt-rtt = "0.4.0"
eh0 = { package = "embedded-hal", version = "0.2" }
embedded-graphics = "0.8.1"
embedded-hal = "1"
fugit = "0.3.7"
itoa = "1.0.15"
nb = "1.1.0"
panic-halt = "1"
sh1106 = "0.5.0"
waveshare-rp2040-zero = "0.8"
